cmake_minimum_required(VERSION 2.8)
project(domset)

if(OpenMVS_USE_OPENMP)
  add_definitions(-DDOMSET_USE_OPENMP)
  if(WIN32)
    if(MSVC)
      add_definitions(-DDOMSET_VISUAL_STUDIO)
      message("Using for loops with signed integer counters")
    else()
      message("Using for loops with unsigned integer counters")
    endif()
  else()
    message("Using for loops with unsigned integer counters")
  endif()
endif()

set(domset_HEADERS ${domset_SOURCE_DIR}/types.h ${domset_SOURCE_DIR}/domset.h)
add_library(domset domset.cc ${domset_HEADERS})
